--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ p.note {
     width: 250px;
     background-color: #333;
     color: white;
-    padding: 20px; /* Perbaikan dari 'auto' */
+    padding: 20px;
     position: fixed;
     top: 0;
     left: 0;
@@ -98,71 +98,8 @@ p.note {
     margin-left: 250px; /* Tambahan Kunci */
 }
 
-.skills-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 20px;
-    padding: 20px;
-}
-
-.card-flip-container {
-    width: 250px;
-    height: 150px;
-    perspective: 1000px;
-}
-
-.card {
-    width: 600px;
-    height: 450px;
-    position: relative;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-}
-
-.card-flip-container:hover .card {
-    transform: rotateY(180deg);
-}
-
-.card-face {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 15px;
-}
-
-.card-front {
-    background-color: #3498db;
-    color: white;
-}
-
-.card-back {
-    background-color: #2c3e50;
-    color: white;
-    transform: rotateY(180deg);
-}
-
-.skill-title {
-    font-size: 1.5em;
-    font-weight: bold;
-}
-
-.skill-description {
-    font-size: 1em;
-}
-
-.skills-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 450px;
-    padding: 20px;
+.skills{
+    font-size: 20px;
 }
 
 .kontak{
